Now filters properly

--- a/deploy/App.html
+++ b/deploy/App.html
@@ -169,9 +169,9 @@
                                 xtype: 'rallybutton',
                                 itemId:'parentButton',
                                 cls:'parent-button',
-                                text: 'Filter By Parent',
+                                text: 'Parent Filter Disabled',
                                 handler: this._openChooserForFilter,
-                                hidden:true,
+                                disabled:true,
                                 scope:this
                             }]);
                 },
@@ -181,10 +181,11 @@
                     var button = this.down(".rallybutton");
                     if (this.typeParents[this.currentType]) {
                         button.setText('Filter By ' + this.typeParents[this.currentType].get('_refObjectName'));
-                        button.show();
+                        button.setDisabled(false);
                     }
                     else {
-                        button.hide();
+                        button.setText('Parent Filter Disabled');
+                        button.setDisabled(true);
                     }
             
                 },
@@ -202,7 +203,6 @@
                     Ext.create('Rally.ui.dialog.ChooserDialog', {
                         artifactTypes: ['portfolioitem'],
                         autoShow: true,
-                        height: 250,
                         title: 'Choose ' + parent.get('_refObjectName'),
                         storeConfig : {
                             filters: filters
